--- a/index.html
+++ b/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
+<!-- The attribute lang="en" in an HTML document tells browsers and 
+ screen readers that the content is in English, which helps with 
+ pronunciation, translation, and language-specific formatting.-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Lab 2 - Getting Started with CSS </title>
-    <!-- Students will add the link tag here -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Welcome to CSS Styling</h1>
-    <!-- Students will add content here -->
-     <p>This is me first attempt at CSS</p>
-     <img src="sample-image.jpg" alt="Sample Image">
-     <h3>What I've Learned:</h3>
-     <ul>
-        <li>HTML Structure</li>
-        <li>CSS Basics</li>
-        <li>Styling Elements</li>
-        <li>Adding Image</li>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Nainoa Nakamura</title>
+        <link rel="stylesheet" href="style.css">
+    
+    </head>
+    <body>
+        <section>
+            <h1>Nainoa Nakamura</h1>
+            <a href="https://outlook.office365.com/mail/">Email: nain@uoregon.edu</a> | Phone: (808)999-9999
 
-     </ul>
-     <footer>
-        Created By Nai Nakamura, CS110
-     </footer>
-     <span>Test text</span>
-</body>
+            <img src="tcqsostuipk21.png" alt="Bitmoji">
+        </section>
+        <section>
+            <h2>Personal Information</h2>
+                <p>I'm a young adult from Hawaii who attends the University of Oregon</p>
+        </section>
+        <section>
+            <h3>Education</h3>
+                <p>Graduated from Hawaii Baptist Academy, Currently attending the University or Oregon</p>
+        </section>
+        <section>
+                <h4>Social/Communication Skills</h4>
+            <ul>
+                <li>Interact with people easily</li>
+                <li>Active listener</li>
+                <li>Able to communicate feelings and feedback</li>
+                <li>Public speaking</li>
+                <li>Able to cooperate with others easily</li>
+            </ul>
+        </section>
+        <section>
+            <h5>Organization Skills</h5>
+            <ol>
+                <li>Always early</li> 
+                <li>Able to Adapt easily</li>
+                <li>Attentitive to detail</li>
+            </ol>
+            </section>
+        <footer>2025 Nainoa Nakamura</footer>
+    </body>
 </html>
+       
