--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <li>Attentitive to detail</li>
             </ol>
             </section>
+        <section>
+         Featured Projects
+        </section>
         <footer>2025 Nainoa Nakamura</footer>
     </body>
 </html>
