--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
             </ol>
             </section>
         <section>
-         Featured Projects
+            <h5>Featured Projects</h5>
+            <ol>
+                <li><a href="https://nain1248.github.io/project4.html" target="_blank">Project 5</a></li>
+                <li><a href="https://nain1248.github.io/project6.html" target="_blank">Project 6</a></li>
+                <li><a href="https://nain1248.github.io/project7.html" target="_blank">Project 7</a></li>
+            </ol>
+
         </section>
         <footer>2025 Nainoa Nakamura</footer>
     </body>
