--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section>
             <h5>Featured Projects</h5>
             <ol>
-                <li><a href="https://nain1248.github.io/project4.html" target="_blank">Project 5</a></li>
-                <li><a href="https://nain1248.github.io/project6.html" target="_blank">Project 6</a></li>
-                <li><a href="https://nain1248.github.io/project7.html" target="_blank">Project 7</a></li>
+                <li><a href="https://nain1248.github.io/project4.html" target="_blank">Project 5: In this project we refractor previous projects to make it run more efficiently</a></li>
+                <li><a href="https://nain1248.github.io/project6.html" target="_blank">Project 6: In this project we  analyze texts using Spacy</a></li>
+                <li><a href="https://nain1248.github.io/project7.html" target="_blank">Project 7: In this project we explore a dataset using Pandas, Matplotlib, Seaborn.</a></li>
             </ol>
 
         </section>
